samples/_failures_safe/1761435478_174901_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f1a05e6.c: In function ‘main’:
./samples/SAFE/__tmp_4f1a05e6.c:151:5: error: expected expression at end of input
  151 |     if (result.data == NULL)
      |     ^~
./samples/SAFE/__tmp_4f1a05e6.c:151:5: error: expected declaration or statement at end of input
